# ml-in-production

./: Dockerfile  app.py
.github/workflows/: docker-build-push.yml
k8s/: deployment.yml  job.yml  pod.yml  service.yml
module_2/: README.md  pandas_formats.py  pandas_inference.py  pyproject.toml  vector_db.py
module_2/minio_crud_client/: README.md  client.py  config.py  docker-compose.yaml  minio-deployment.yaml
module_2/minio_crud_client/test/: downloaded_file.txt  test_client.py  test_kube.py
